# upscaler

./: .gitignore  README.md  pyproject.toml
dev_scripts/: convert_to_onnx.py  model_arch.py
src/: main.py  playground.py  playground_video.py
src/core/: config.py  convert_fp16.py  convert_to_onnx.py  ffmpeg_utils.py  io_utils.py  path_utils.py  system_utils.py  upscaler.py  video.py  video_pipeline.py
src/gui/: comparison_widget.py  log_handler.py  main_window.py  worker.py
src/neural_upscaler/: config.py  main.py
src/neural_upscaler/engine/: upscaler.py  video_processor.py
src/neural_upscaler/gui/: main_window.py
src/neural_upscaler/gui/utils/: worker.py
src/neural_upscaler/utils/: file_io.py  system.py
